Solved the image stretching problem on mobile

--- a/web/src/sass/home/_homeGallery.scss
+++ b/web/src/sass/home/_homeGallery.scss
@@ -19,8 +19,6 @@
       li {
         list-style-type: none;
         width: 100%;
-        display: flex;
-        justify-items: stretch;
         position: relative;
         overflow: hidden;
         img {
@@ -33,13 +31,13 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: rgba(15,17,13,0.8);
+          background-color: rgba(15, 17, 13, 0.8);
           display: flex;
           align-items: center;
           justify-content: center;
           opacity: 0;
           transition: 0.4s;
-          .gallery-link { 
+          .gallery-link {
             margin: 0;
             z-index: 3;
             border: none;
@@ -54,17 +52,16 @@
               margin: 0;
             }
           }
-          .gallery-link:hover { 
+          .gallery-link:hover {
             p {
-             color: $purple;
+              color: $purple;
             }
           }
-
         }
       }
-      li:hover { 
+      li:hover {
         .img-hover {
-         opacity: 1;
+          opacity: 1;
         }
       }
       .item-1 {
@@ -114,24 +111,24 @@
       overflow: hidden;
       font-family: $font;
       cursor: pointer;
-        p {
-          position: relative;
-          color: $white;
-          font-size: 1rem;
-          font-weight: 400;
-          margin: 10px 0;
-          z-index: 2;
-        }
+      p {
+        position: relative;
+        color: $white;
+        font-size: 1rem;
+        font-weight: 400;
+        margin: 10px 0;
+        z-index: 2;
       }
-      .gallery-link:hover {
-        p{ 
-          color: $purple;
-          font-weight: 500;
-        }
-        .btn-bg {
-          min-width: 100%;
-        }
+    }
+    .gallery-link:hover {
+      p {
+        color: $purple;
+        font-weight: 500;
       }
+      .btn-bg {
+        min-width: 100%;
+      }
+    }
   }
   .gallery-popup {
     position: fixed;
@@ -139,7 +136,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(15,17,13,0.8);
+    background-color: rgba(15, 17, 13, 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -193,10 +190,10 @@
 
 @media (max-width: 600px) {
   .gallery-home-container {
-    .wrapper {  
+    .wrapper {
       .gallery-link {
-       margin: 35px auto;
+        margin: 35px auto;
       }
-    } 
+    }
   }
 }
